Fixing Calendars into Longs so Proposal can be saved in datastore